option('documentation',
       type: 'boolean',
       value: false,
       description : 'Build API reference')

option('gtk_doc',
       type: 'boolean',
       value: false,
       description: 'Build API reference',
       deprecated: 'documentation')

option('man-pages',
       type: 'boolean',
       value: false,
       description : 'Build man pages for installed tools')

option('introspection',
       type: 'feature',
       value: 'auto',
       yield: true,
       description: 'Build the introspection data (requires gobject-introspection)')

option('build-testsuite',
       description : 'Build the test suite',
       type: 'boolean',
       value: true)

option('build-examples',
       description : 'Build example test programs',
       type: 'boolean',
       value: true)

option('fontconfig',
       description : 'Build with FontConfig support. Passing \'auto\' or \'disabled\' disables fontconfig where it is optional, i.e. on Windows and macOS. Passing \'disabled\' on platforms where fontconfig is required results in error.',
       type: 'feature',
       value: 'auto')

option('sysprof',
       type : 'feature',
       value : 'disabled',
       description : 'Include tracing support for sysprof')

option('libthai',
       type : 'feature',
       value : 'auto',
       description : 'Build with libthai support')

option('cairo',
       type : 'feature',
       value : 'enabled',
       description : 'Build with cairo support')

option('xft',
       type : 'feature',
       value : 'auto',
       description : 'Build with xft support')

option('freetype',
       type : 'feature',
       value : 'auto',
       description : 'Build with freetype support')
