option('documentation',
       description: 'Build API reference for Pango',
       type: 'boolean',
       value: false)
option('introspection',
       description: 'Build the GObject introspection data for Pango',
       type: 'feature',
       value: 'auto',
       yield: true)
option('install-tests',
       description : 'Install tests',
       type: 'boolean',
       value: false)
option('sysprof',
       type : 'feature',
       value : 'disabled',
       description : 'Include tracing support for sysprof')
option('libthai',
       type : 'feature',
       value : 'auto',
       description : 'Build with libthai support')
option('cairo',
       type : 'feature',
       value : 'enabled',
       description : 'Build with cairo support')
option('build-testsuite',
       description : 'Build the test suite',
       type: 'boolean',
       value: true)
option('build-examples',
       description : 'Build example test programs',
       type: 'boolean',
       value: true)

