option('gtk_doc',
       description: 'Build API reference for Pango using GTK-Doc',
       type: 'boolean',
       value: false)
option('introspection',
       description: 'Build the GObject introspection data for Pango',
       type: 'boolean',
       value: true)
option('install-tests',
       description : 'Install tests',
       type: 'boolean',
       value: 'false')
option('use_fontconfig',
       description : 'Force using FontConfig where it is optional, on Windows and macOS.  This is ignored on platforms where it is required',
       type: 'boolean',
       value: 'false')
option('sysprof',
       type : 'feature',
       value : 'disabled',
       description : 'include tracing support for sysprof')
option('libthai',
       type : 'feature',
       value : 'auto',
       description : 'Build with libthai support')
option('cairo',
       type : 'feature',
       value : 'auto',
       description : 'Build with cairo support')
option('xft',
       type : 'feature',
       value : 'auto',
       description : 'Build with xft support')
