option('docs',
       description: 'Build API reference for Pango',
       type: 'boolean',
       value: false)
option('introspection',
       description: 'Build the GObject introspection data for Pango',
       type: 'feature',
       value: 'auto',
       yield: true)
option('install-tests',
       description : 'Install tests',
       type: 'boolean',
       value: false)
option('sysprof',
       type : 'feature',
       value : 'disabled',
       description : 'include tracing support for sysprof')
option('libthai',
       type : 'feature',
       value : 'auto',
       description : 'Build with libthai support')
option('cairo',
       type : 'feature',
       value : 'enabled',
       description : 'Build with cairo support')
