## Process this file with automake to create Makefile.in.

# The name of the module.
DOC_MODULE=pango

# The top-level SGML file.
DOC_MAIN_SGML_FILE=pango-docs.sgml

# Extra options to supply to gtkdoc-scan
SCAN_OPTIONS=--deprecated-guards="PANGO_DISABLE_DEPRECATED"

# The directory containing the source code. Relative to $(srcdir)
DOC_SOURCE_DIR=../pango

# Used for dependencies
HFILE_GLOB=$(top_srcdir)/pango/*.h
CFILE_GLOB=$(top_srcdir)/pango/*.c

# Headers to ignore
IGNORE_HFILES=			\
	ftglue.h		\
	mini-fribidi		\
	opentype		\
	module-defs.h		\
	modules.h		\
	pangoatsui-private.h	\
	pangocairo-private.h	\
	pangocairo-fc.h		\
	pangocairo-win32.h	\
	pangocairo-atsui.h	\
	pango-color-table.h	\
	pango-engine-private.h	\
	pango-impl-utils.h	\
	pango-glyph-item-private.h	\
	pango-layout-private.h	\
	pango-script-table.h	\
	pangofc-private.h	\
	pangoft2-private.h	\
	pangowin32-private.h	\
	pangoatsui-private.h	\
	pangox-private.h	\
	pangoxft-private.h	\
	pango-ot-private.h	\
	pango-script-lang-table.h	\
	pango-language-sample-table.h

# CFLAGS and LDFLAGS for compiling scan program. Only needed
# if $(DOC_MODULE).types is non-empty.
INCLUDES =               	\
	-DPANGO_ENABLE_BACKEND	\
	-DPANGO_ENABLE_ENGINE	\
	-I$(top_srcdir)		\
	$(GLIB_CFLAGS)		\
	$(XFT_CFLAGS)		\
	$(CAIRO_CFLAGS)		\
	$(FREETYPE_CFLAGS)	\
	$(X_CFLAGS)

# libpangoxft.la and/or libpangocairo.la pull in libpango.la
# and libpangoft2.la;
# We're assuming here that we'll only regenerate the
# HTML docs on Unix. We don't get introspection on Win32
# specific types, but that isn't a big deal.

GTKDOC_LIBS =

if HAVE_XFT
GTKDOC_LIBS += $(top_builddir)/pango/libpangoxft-1.0.la
endif

if HAVE_CAIRO
GTKDOC_LIBS += $(top_builddir)/pango/libpangocairo-1.0.la
endif

# Extra options to supply to gtkdoc-mkdb
MKDB_OPTIONS=--sgml-mode --output-format=xml


# Non-autogenerated SGML files to be included in $(DOC_MAIN_SGML_FILE)
content_files =				\
	pango_markup.sgml		\
	version.xml			\
	pango-querymodules.xml

# Images to copy into HTML directory
HTML_IMAGES =				\
	layout.gif			\
	rotated-text.png

if ENABLE_DOC_CROSS_REFERENCES
# Extra options to supply to gtkdoc-fixref
FIXXREF_OPTIONS=--extra-dir=$(GLIB_PREFIX)/share/gtk-doc/html/glib \
	--extra-dir=$(CAIRO_PREFIX)/share/gtk-doc/html/cairo
endif

include $(top_srcdir)/gtk-doc.make

########################################################################

man_MANS = pango-querymodules.1 
BUILT_EXTRA_DIST = $(man_MANS)
MAINTAINERCLEANFILES = $(man_MANS)
if ENABLE_MAN
.xml.1:
	@XSLTPROC@ -nonet http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl $<
dist-local-check-mans-enabled:
	@if grep "Man generation disabled" $(man_MANS) >/dev/null; then $(RM) $(man_MANS); fi
else
$(man_MANS):
	@echo Man generation disabled.  Creating dummy $@.  Configure with --enable-man to enable it.
	@echo Man generation disabled.  Remove this file, configure with --enable-man, and rebuild Pango > $@
dist-local-check-mans-enabled:
	@echo "*** --enable-man must be used in order to make dist"
	@false
endif

EXTRA_DIST +=				\
	layout.fig			\
	layout.eps			\
	version.xml.in			\
	check.docs

# force doc rebulid after configure
dist-hook-local: dist-local-check-mans-enabled dist-local-check-no-cross-references maintainer-clean-local all-local
	files='$(BUILT_EXTRA_DIST)';				\
	for f in $$files; do					\
	  if test -f $$f; then d=.; else d=$(srcdir); fi;	\
	  cp $$d/$$f $(distdir) || exit 1; done;		\
								\
	mkdir $(distdir)/TEXT;					\
	for f in $(srcdir)/TEXT/* ; do				\
	  test -f $$f && cp -p $$f $(distdir)/TEXT;		\
	done

#
# Require gtk-doc when making dist
#
if ENABLE_DOC_CROSS_REFERENCES
dist-local-check-no-cross-references:
	@echo "*** --disable-doc-cross-references must be used in order to make dist"
	@false
else
dist-local-check-no-cross-references:
endif

.PHONY: dist-local-check-no-cross-references

TESTS = check.docs
